<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_10_8"
        android:layout_marginStart="@dimen/dp_10_6"
        android:layout_marginTop="@dimen/dp_10_4"
        android:layout_marginEnd="@dimen/dp_10_6"
        android:contentDescription="@null"
        android:src="@drawable/bcp_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/operationButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_10_6"
        android:layout_marginStart="@dimen/dp_5_1"
        android:layout_marginEnd="@dimen/dp_5_1"
        android:text="@string/do_operation"
        app:backgroundTint="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/exchangeMainCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5_1"
        android:layout_marginEnd="@dimen/dp_5_1"
        app:cardCornerRadius="@dimen/dp_5_3"
        app:cardElevation="@dimen/dp_10_1"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/gris"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/almost_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_0_5"
                    android:background="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/topCurrencyTextView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/dp_5_1"
                    android:layout_marginEnd="@dimen/dp_5_1"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/bottomCurrencyTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/currency_one" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/bottomCurrencyTextView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/dp_5_1"
                    android:layout_marginEnd="@dimen/dp_5_1"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/topCurrencyTextView"
                    tools:text="@string/currency_two" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/exchangeCardView"
                    android:layout_width="@dimen/dp_4_8"
                    android:layout_height="@dimen/dp_4_8"
                    android:layout_marginEnd="@dimen/dp_10_1"
                    app:cardCornerRadius="@dimen/dp_4_4"
                    app:cardElevation="@dimen/dp_0_0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_baseline_loop_24" />

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/middleGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".7" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/youSendTil"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_10_6"
                android:layout_marginTop="@dimen/dp_5_1"
                android:hint="@string/you_send"
                app:layout_constraintBottom_toBottomOf="@+id/middleGuideline"
                app:layout_constraintEnd_toEndOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/youSendEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:inputType="numberDecimal"
                    android:paddingStart="@dimen/dp_5_1"
                    android:paddingEnd="@dimen/dp_5_1" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/youReceiveTil"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_10_6"
                android:hint="@string/you_receive"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/middleGuideline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/youReceiveEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:focusable="false"
                    android:inputType="numberDecimal"
                    android:paddingStart="@dimen/dp_5_1"
                    android:paddingEnd="@dimen/dp_5_1" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/exchangeRateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_2_8"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exchangeMainCardView"
        tools:text="Demo" />

    <ProgressBar
        android:id="@+id/viewProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>